--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -1,7 +1,7 @@
 .consultation {
     min-height: 680px;
     padding: 100px 0 92px 0;
-    background: url(../img/bgconsultation.png) center (center / cover) no-repeat;
+    background: url(../img/bgconsultation.jpg) center (center / cover) no-repeat;
     &__descr {
         color: #fff;
         font-weight: 500;
